Fixed main content overlapping header on homepage

--- a/css/main.css
+++ b/css/main.css
@@ -29,6 +29,7 @@ header {
     position: sticky;
     top: 0;
     font-size: clamp(1rem, 1.5vw, 1.45rem);
+    z-index: 1000;
     
     nav {
         ul {
